# Makeitalive

./: .gitignore  README.md  colab_runner.ipynb  colab_runner_extended.ipynb  dataset_test.ipynb  main.py  oral_prep.md  pyproject.toml  requirements.txt  train.py
notebooks/: 01_explore_motion.ipynb  01_explore_motion_flow.ipynb  02_evaluate_model.ipynb  03_inference_video.ipynb  test_dataset.ipynb
poster/: README.md  poster1.aux  poster1.tex  poster1_v2.aux  poster1_v2.tex  poster1_v2_old.tex  poster2.aux  poster2.tex  poster2_v2.tex
report/: main.aux  main.out  main.tex
src/SVD/: make_dataset_svd.py  svd_colab.ipynb  svd_local.ipynb  train_svd_lora.py
src/data/: dataset.py  download_youtube.py  make_dataset_video.py  make_dataset_youtube.py
src/makeitalive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/motion_flow/: model_old.py  train.py  train_old.py
