[project]
name = "makeitalive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python<=4.12",
    "pillow>=12.1.1",
    "scipy>=1.15.3",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.3",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]